# automatic-incremental-uploads

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-publish.yml
automatic_incremental_uploads/: __main__.py
