[tool.poetry]
name = "automatic-incremental-uploads"
version = "0.1.0"
description = ""
authors = ["Martin Ueding <mu@martin-ueding.de>"]
license = "MIT"
readme = "README.md"
packages = [{include = "automatic_incremental_uploads"}]

[tool.poetry.dependencies]
python = "^3.11"
inotify = "^0.2.10"
pysftp = "^0.2.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
